[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gemstone_utils"
version = "0.5.0a2"
description = "Crypto utilities, encrypted SQLAlchemy fields, and experimental secret resolvers."
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "Clinton Bunch" }
]
requires-python = ">=3.10"

dependencies = [
    "cryptography>=41.0",
    "sqlalchemy>=2.0",
    "uuid6>=2024.7.1; python_version < '3.14'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "psycopg[binary]>=3.1",
]
docs = [
    "sphinx>=7.0,<9",
    "myst-parser>=2.0,<4",
    "furo>=2024.0.0",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.5",
    "Pillow>=10.0",
    "sphinxcontrib-mermaid>=0.9",
]

[project.urls]
Homepage = "https://github.com/gemstone-software-dev/gemstone_utils"
Documentation = "https://gemstone-software-dev.github.io/gemstone_utils/"

[tool.pytest.ini_options]
testpaths = ["tests"]
